--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27
+envlist = py26, py27, py33, py34
 
 [testenv]
 commands = py.test testing
@@ -13,3 +13,6 @@ deps =
     vcrpy
     mock
     pytest-capturelog
+    sqlalchemy
+    requests
+    beautifulsoup4
